--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,5 +8,29 @@ body {
 
 .marker {
   stroke : #f8c102;
+  height: 24px;
+  width: 24px;
+  transform: translate(50%, -100%);
 }
 
+.popup {
+  width: 40vw;
+  padding : 1rem;
+}
+
+.popup-image{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.entry-form label ,.entry-form input, .entry-form textarea , .entry-form button {
+  font-size: 1rem;
+  margin: 0.5rem 0;
+  display: block;
+  width: 100%;
+}
+
+.error {
+  color  : #f05305;
+}
